# defradb-py

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
archive/: setup.py
src/: __init__.py  defradb.py  example.py
src/api/: api_pb2_grpc.py
