[tool.pdm]

[project]
name = "defradb"
version = "0.1.0"
description = ""
authors = [
    {name = "Orpheus Lummis", email = "o@orpheuslummis.info"},
]
dependencies = [
    "gql[all]>=3.4.0",
    "requests>=2.28.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
